why does getRandomWord run on line 51 but, if I delete onclick in ln 51 to test, it doesn't run via my event listener?

--- a/new/sailor.html
+++ b/new/sailor.html
@@ -41,7 +41,7 @@
 
     document.addEventListener('DOMContentLoaded', () => getRandomWord());
     
-    const onClick = document.getElementById("#word").addEventListener('click', () => getRandomWord());
+    document.getElementById("#word").addEventListener('click', () => getRandomWord());
 
 </script>
         <div class="poem">
