--- a/grid_test.html
+++ b/grid_test.html
@@ -3,22 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Test</title>
+    <title>silence</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             white-space: pre;
         }
-
-        .text {
+        .text-1 {
             left: 0;
             line-height: 20px;
-            margin-top: 0px;
-            margin-left: 40%;
+            margin-top: -130px;
+            margin-left: -1.8%;
             position: fixed;
-            text-align: justify;
+            text-align: center;
             top: 70%;
             width: 100%;
+            font-size: 70%;
+            text-align: center;
+        }
+        .text-2 {
+            line-height: 20px;
+            margin-top: 0px;
+            margin-left: 20%;
+            margin-right: 40%;
+            position: fixed;
+            top: 70%;
+            width: 10ch;
+            font-size: 70%;
+            text-align: justify;
+        }
+
+        .text-3 {
+            left: 0;
+            line-height: 20px;
+            margin-top: -100px;
+            margin-left: -1.8%;
+            position: fixed;
+            text-align: center;
+            top: 70%;
+            width: 100%;
+            font-size: 70%;
         }
 
         .grid-container {
@@ -36,174 +60,62 @@
             top: 70%;
             width: 100%;
         }
-        .box-properties {
+        .voiced-box {
             font-size: 150%;
         }
-        .top-left {
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 2;
-            grid-row-end: 3;
+        .silent-box {
+            cursor: grab;
+            font-size: 150%;
         }
-        .top-centre {
-            grid-column-start: 3;
-            grid-column-end: 4;
-            grid-row-start: 2;
-            grid-row-end: 3;
-        }
-        .top-right {
-            grid-column-start: 4;
-            grid-column-end: 5;
-            grid-row-start: 2;
-            grid-row-end: 3;
-        }
-        .second-left {
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 3;
-            grid-row-end: 4;
-        }
-        .second-centre {
-            grid-column-start: 3;
-            grid-column-end: 4;
-            grid-row-start: 3;
-            grid-row-end: 4;
-        }
-        .second-right {
-            grid-column-start: 4;
-            grid-column-end: 5;
-            grid-row-start: 3;
-            grid-row-end: 4;
-        }
-        .centre-left {
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 4;
-            grid-row-end: 5;
-        }
-        .centre {
-            grid-column-start: 3;
-            grid-column-end: 4;
-            grid-row-start: 4;
-            grid-row-end: 5;
-        }
-        .centre-right {
-            grid-column-start: 4;
-            grid-column-end: 5;
-            grid-row-start: 4;
-            grid-row-end: 5;
-        }
-        .fourth-left {
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 5;
-            grid-row-end: 6;
-        }
-        .fourth-centre {
-            grid-column-start: 3;
-            grid-column-end: 4;
-            grid-row-start: 5;
-            grid-row-end: 6;
-        }
-        .fourth-right {
-            grid-column-start: 4;
-            grid-column-end: 5;
-            grid-row-start: 5;
-            grid-row-end: 6;
-        }
-        .bottom-left {
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 6;
-            grid-row-end: 7;
-        }
-        .bottom-centre {
-            grid-column-start: 3;
-            grid-column-end: 4;
-            grid-row-start: 6;
-            grid-row-end: 7;
-        }
-        .bottom-right {
-            grid-column-start: 4;
-            grid-column-end: 5;
-            grid-row-start: 6;
-            grid-row-end: 7;
-        } 
-
     </style>
 </head>
 <body>
     <div class="grid-container">
-        <div class="box-properties"><div id="top-left" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="top-centre" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="top-right" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="second-left" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="second-centre" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="second-right" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="centre-left" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="centre" onClick="setSilence(this.id)"> </div></div>
-        <div class="box-properties"><div id="centre-right" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="fourth-left" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="fourth-centre" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="fourth-right" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="bottom-left" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="bottom-centre" onClick="setSilence(this.id)">silence</div></div>
-        <div class="box-properties"><div id="bottom-right" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="top-left" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="top-centre" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="top-right" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="second-left" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="second-centre" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="second-right" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="centre-left" onClick="setSilence(this.id)">silence</div></div>
+        <div class="silent-box"><div id="centre" onClick="setSilence(this.id)"> </div></div>
+        <div class="voiced-box"><div id="centre-right" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="fourth-left" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="fourth-centre" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="fourth-right" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="bottom-left" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="bottom-centre" onClick="setSilence(this.id)">silence</div></div>
+        <div class="voiced-box"><div id="bottom-right" onClick="setSilence(this.id)">silence</div></div>
     </div>
     <div class="text-box">
-    <p class="text">The constellation is the simplest possible kind of configuration in poetry which has for its
-        basic unit the word, it encloses a group of words as if it were drawing stars together to
-        form a cluster.</p>
+    <span class="text-1">'silence' Eugen Gomringer 1954</span>
+    <div class="text-2">
+    <span>"The constellation is ordered by the poet.</span>
+    <span>He determines the play-area, the field or force and suggests its possibilities.</span>
+    <span>The reader, the new reader, grasps the idea of play, and joins in."</span></div>
 
-        <p class="text">The constellation is an arrangement, and at the same time a play-area of fixed
-        dimensions.</p>
-
-        <p class="text">The constellation is ordered by the poet. He determines the play-area, the field or force
-        and suggests its possibilities. the reader, the new reader, grasps the idea of play, and joins
-        in.</p>
+        <span class="text-3">play-area remaster Calum Rodger 2022</span>
 
     </div>
 
     
 </body>
 <script>
-
-    // function setPointer(pointedPosition) {
-    //     // let documentPosition = document.querySelector(`#${pointedPosition}`)
-    //     const documentPosition = document.getElementById(`#${pointedPosition}`);
-    //     console.log(documentPosition)
-    //     documentPosition.innerHTML += `<div class="box-properties"><div id="top-left" onMouseOver= "setPointer(this.id)" onClick="setSilence(this.id)">silence</div></div>`;
-    //     console.log(documentPosition.innerHTML)
-    // }
-
-    function setSilence(clickedPosition) {
+    function setSilence(touchedSilence) {
         const silences = ["top-left", "top-centre", "top-right", "second-left", "second-centre", "second-right", "centre-left", "centre", "centre-right", "fourth-left", "fourth-centre", "fourth-right", "bottom-left", "bottom-centre", "bottom-right"]
-        let documentPosition = document.querySelector(`#${clickedPosition}`)
-        if (documentPosition.textContent == " ") {
-            console.log(documentPosition.textContent)
-            const sort = silences.indexOf(clickedPosition);
+        let oldSilence = document.querySelector(`#${touchedSilence}`)
+        if (oldSilence.textContent == " ") {
+            const sort = silences.indexOf(touchedSilence);
             if (sort !== -1) {
             silences.splice(sort, 1);
                 }
-            documentPosition.textContent = "silence"
-        console.log(silences)
-
-        // for (let i = 0; i < silences.length; i++) {
-        // let silence = silences[i]
-        // let toSilence = document.querySelector(`#${silence}`)
-        // if (toSilence.textContent === " ") {
-        //     toSilence.textContent = "silence"
-        // }
-        // }
-        let selectedSilence = silences[Math.floor(Math.random() * silences.length)]
-        let selectedSilenceId = document.querySelector(`#${selectedSilence}`)
-        if (selectedSilenceId.textContent === "silence") {
-            selectedSilenceId.textContent = " "
-        } else {
-            selectedSilenceId.textContent = "silence"
-        }
+            oldSilence.textContent = "silence"
+            oldSilence.parentElement.className = "voiced-box"
+            let randomSilence = silences[Math.floor(Math.random() * silences.length)]
+            let newSilence = document.querySelector(`#${randomSilence}`)
+            newSilence.textContent = " "
+            newSilence.parentElement.className = "silent-box"
         } 
-        }
-
+    }
 </script>
 </html>
