--- a/grid_test.html
+++ b/grid_test.html
@@ -10,55 +10,53 @@
             white-space: pre;
         }
         .text-1 {
-            left: 0;
-            line-height: 20px;
-            margin-top: -130px;
-            margin-left: -1.8%;
-            position: fixed;
-            text-align: center;
-            top: 70%;
-            width: 100%;
+            top: 65%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            position: absolute;
             font-size: 70%;
             text-align: center;
         }
         .text-2 {
-            line-height: 20px;
-            margin-top: 0px;
-            margin-left: 20%;
-            margin-right: 40%;
-            position: fixed;
-            top: 70%;
-            width: 10ch;
-            font-size: 70%;
+            top: 75%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            position: absolute;
+            font-size: 60%;
             text-align: justify;
+            overflow-wrap: anywhere;
+        }
+
+        .text2-5 {
+            top: 80%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            position: absolute;
+            font-size: 50%;
+            text-align: center;
         }
 
         .text-3 {
-            left: 0;
-            line-height: 20px;
-            margin-top: -100px;
-            margin-left: -1.8%;
-            position: fixed;
+            top: 85%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            position: absolute;
             text-align: center;
-            top: 70%;
-            width: 100%;
-            font-size: 70%;
+            font-size: 60%;
         }
 
         .grid-container {
             display: grid;
-            grid-template-columns: 65px 65px 65px;
+            grid-template-columns: 33% 33% 33%;
             grid-column-gap: 1%;
-            grid-template-rows: 20px 20px 20px 20px 20px;
+            grid-template-rows: 20% 20% 20% 20% 20%;
             grid-row-gap: 2%;
-            left: 0;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            position: absolute;
             line-height: 20px;
-            margin-top: -300px;
-            margin-left: 40%;
-            position: fixed;
             text-align: left;
-            top: 70%;
-            width: 100%;
         }
         .voiced-box {
             font-size: 150%;
@@ -88,15 +86,15 @@
         <div class="voiced-box"><div id="bottom-right" onClick="setSilence(this.id)">silence</div></div>
     </div>
     <div class="text-box">
-    <span class="text-1">'silence' Eugen Gomringer 1954</span>
-    <div class="text-2">
-    <span>"The constellation is ordered by the poet.</span>
-    <span>He determines the play-area, the field or force and suggests its possibilities.</span>
-    <span>The reader, the new reader, grasps the idea of play, and joins in."</span></div>
-
-        <span class="text-3">play-area remaster Calum Rodger 2022</span>
-
-    </div>
+    <span class="text-1">
+    <em>silence</em>
+    Eugen Gomringer 1954</span>
+    <div class="text-2"><span>
+    The constellation is ordered by the poet. He determines the play-area, 
+    the field or force and suggests its possibilities. The reader, the new 
+    reader, grasps the idea of play, and joins in.</span></div>
+    <div class="text2-5"><span>From Line to Constellation 1950</span></div>
+    <span class="text-3">play-area remaster Calum Rodger 2022</span></div>
 
     
 </body>
