--- a/lighght_______/index2.html
+++ b/lighght_______/index2.html
@@ -11,9 +11,11 @@
 <style>
     .lighght {
     font-family: 'Courier New', Courier, monospace;
+    width: 100%;
+    height: 100%;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 0%;
+    text-align: center;
     position: absolute;
     font-weight: bold;
 }
