--- a/grid_test.html
+++ b/grid_test.html
@@ -24,7 +24,8 @@
             position: absolute;
             font-size: 60%;
             text-align: justify;
-            overflow-wrap: anywhere;
+            text-justify:inter-word;
+            width: 30px;
         }
 
         .text2-5 {
@@ -89,10 +90,8 @@
     <span class="text-1">
     <em>silence</em>
     Eugen Gomringer 1954</span>
-    <div class="text-2"><span>
-    The constellation is ordered by the poet. He determines the play-area, 
-    the field or force and suggests its possibilities. The reader, the new 
-    reader, grasps the idea of play, and joins in.</span></div>
+    <div class="text-2" text-align="justify"><span>
+    The constellation is ordered by the poet. He determines the play-area, the field or force and suggests its possibilities. The reader, the new reader, grasps the idea of play, and joins in.</span></div>
     <div class="text2-5"><span>From Line to Constellation 1950</span></div>
     <span class="text-3">play-area remaster Calum Rodger 2022</span></div>
 
